2007-09-04  Helmut Eller  <heller@common-lisp.net>

	Move startup animation to contrib.

	* slime.el (slime-repl-banner-function): New hook.
	(slime-repl-update-banner): Use it and reset markers after calling
	it.
	(slime-set-default-directory): Don't call slime-repl-update-banner
	here.
	(slime-repl-insert-prompt): Set slime-repl-input-end-mark to
	point-max.

2007-09-04  Helmut Eller  <heller@common-lisp.net>

	* slime.el: Move inferior-slime-mode to contrib.

2007-09-04  Helmut Eller  <heller@common-lisp.net>

	* slime.el: Fix the test suite (except for SBCL).

2007-09-04  Helmut Eller  <heller@common-lisp.net>

	Simplify slime-process-available-input.

	* slime.el (slime-process-available-input): We are called in a
	process filter, i.e. at arbitrary times and in an aribtrary
	buffer.  So it doesn't make sense to save-and-restore the current
	buffer here
	(slime-eval-async): Instead, save and restore the buffer here.
	(slime-net-read-or-lose): New.

2007-09-04  Helmut Eller  <heller@common-lisp.net>

	Remove request-abort condition.

	* swank-backend.lisp (request-abort): Removed
	(abort-request): Removed.  Replace all (3) uses with ERROR.
	* swank.lisp (eval-for-emacs): No special case for request-abort.
	* slime.el (slime-eval-async): Remove optional arg of :abort.

2007-09-04  Helmut Eller  <heller@common-lisp.net>

	Rename slime-insert-possibly-as-rectangle to slime-insert-indented.

	* slime.el (slime-insert-indented): Renamed. Update callers.

2007-08-31  Helmut Eller  <heller@common-lisp.net>

	Move compound prefix completion and autodoc to contrib.

	* swank.lisp (simple-completions): Rewritten for simplicity.
	(operator-arglist): Rewritten for simplicity.

	* slime.el (slime-complete-symbol-function): Make simple
	completion the default.
	(slime-echo-arglist-function, slime-echo-arglist): New hook.

	Remove corresponding key bindigs.

	* slime.el (slime-obsolete-commands): New table. Use it to bind
	a command with an upgrade notice.
